apps/media/saldivar-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saldivar-external
  namespace: saldivar-ingress
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: saldivar-external
  namespace: saldivar-ingress
subsets:
  - addresses:
      - ip: 10.0.1.6
    ports:
      - name: http
        port: 80
